# uk-gp-practices

./: .gitignore  README.md  pyproject.toml
ods_gp_practices/: __init__.py  download.py  index.py  models.py  normalise.py  paths.py
src/uk_gp_practices/: __init__.py  cli.py  db.py  download.py  index.py  models.py  normalise.py  paths.py
src/uk_gp_practices/sources/: __init__.py  base.py  england.py  scotland.py
tests/: test_cli.py  test_download.py  test_epraccur_ingest.py  test_normalise.py  test_paths.py  test_scotland_ingest.py
tests/fixtures/: epraccur_sample.csv  scotland_sample.csv
uk_gp_practices/: __init__.py  cli.py  db.py  download.py  index.py  models.py
